src/log/build_2024-11-12_19-15-52/navegacao_pkg/stderr.log
  File "/home/atwork/caramelo_goiania/src/install/navegacao_pkg/lib/python3.10/site-packages/navegacao_pkg/camera_node.py", line 39
    if colors[0][0] > 140 and colors[1][0] < 135 and color[0][0]
                                                                ^
SyntaxError: expected ':'

